deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-miniprojet-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-miniprojet
  template:
    metadata:
      labels:
        app: k8s-miniprojet
    spec:
      containers:
        - name: k8s-miniprojet
          image: blooomoo/k8s-microproject
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5    
            periodSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: k8s-miniprojet-volume
      volumes:
        - name: k8s-miniprojet-volume
          persistentVolumeClaim:
            claimName: k8s-miniprojet-pvc
