service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-miniprojet-service
spec:
  type: NodePort
  selector:
    app: k8s-miniprojet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
