ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-microproject-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - k8s-microproject.com
    secretName: tls-secret
  rules:
  - host: k8s-microproject.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-miniprojet-service
            port:
              number: 80
